--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 astroid==2.8.4
+certifi==2021.10.8
+charset-normalizer==2.0.7
 dataclasses==0.6
+docopt==0.6.2
+idna==3.3
 isort==5.9.3
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
@@ -7,7 +11,10 @@ paho-mqtt==1.6.1
 pkg-resources==0.0.0
 platformdirs==2.4.0
 pylint==2.11.1
+requests==2.26.0
+thingspeak==1.0.0
 toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.10.0.2
+urllib3==1.26.7
 wrapt==1.13.3
